#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-09-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.44 released.

        * Changed fullauto -V to work better with Cygwin


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.43 released.

        * Forgot to include fullauto.pl changes in Version 0.42


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.42 released.

        * Makefile.PL changed to not demand particular versions
          of LWP or Term::Menus when autoloading

        * Added --version and -V arguments and printouts

        * --edit and -e now open broken syntax files and open
          faster


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.41 released.

        * Makefile.PL substantially modified with latest
          version of Module::Install.

        * Build.PL removed

        * Makefile.PL modified to accomodate stand-alone
          Windows exe installer.

        * Returns content on both STDOUT and STDERR when
          content exists on both


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.40 released.

        * 'Finally' got gpg signature working again

        * Modifed Makefile.PL to enable users to automatically
          install Cygwin when Windows is detected. This now
          works.


2010-09-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.39 released.

        * Changed install to include latest Module::Install

        * Added option to install Cygwin when Windows is
          detected and FullAuto install is not running in