@@ -17,7 +17,7 @@ provides:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto:
     file: lib/Net/FullAuto.pm
-    version: 0.44
+    version: 0.45
   Net::FullAuto::FA_Core:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto::FA_DB:
@@ -48,7 +48,6 @@ recommends:
 requires:
   Crypt::CBC: 0
   Crypt::DES: 0
-  DB_File: 0
   Getopt::Long: 0
   HTTP::Date: 0
   IO::Capture::Stderr: 0
@@ -65,6 +64,7 @@ requires:
   Term::ReadKey: 0
   Tie::Cache: 0
   URI: 0
+  DB_File: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.44
+version: 0.45
