@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.44';
+our $VERSION='0.45';
 
 
 use 5.005;
