@@ -25,6 +25,15 @@
 ################################################################
 
 
+2010-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.45 released.
+
+        * Moved "requires DB_File" to bottom of requires list
+          in continuing effort to clean up CPAN testers
+          reports
+
+
 2010-09-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.44 released.
